--- a/src/app/components/product-showcase/product-showcase.component.html
+++ b/src/app/components/product-showcase/product-showcase.component.html
@@ -190,7 +190,7 @@
                           <div class="top_title">
                               <h2> Bestseller</h2>
                           </div>
-                          <div class="small_product_active owl-carousel">
+                          <div class="small_product_active ">
                               <div class="small_product_item">
                                   <div class="small_product">
                                       <div class="small_product_thumb">
